# memoturn

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PRODUCT.md  README.md  SECURITY.md  biome.json  docker-compose.yml  lefthook.yml  package.json  renovate.json  tsconfig.base.json  turbo.json
.claude/: README.md  doc-coupling.json  settings.json
.claude/agents/: doc-sync-auditor.md  endpoint-builder.md  ingest-syncer.md  prisma-migrator.md  rbac-auditor.md  tdd-engineer.md  tdd.md
.claude/hooks/: doc-drift-reminder.ts  guard-generated.ts
.cursor/plans/: competitive_gap_features_4c3e1e55.plan.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  self_hosting.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy-site.yml  docker-build.yml  e2e.yml  release.yml
apps/api/: package.json  tsconfig.json
apps/console/: index.html  package.json  playwright.config.ts  tsconfig.json  tsr.config.json  vite.config.ts  vitest.config.ts
apps/docs/: astro.config.mjs  package.json  tsconfig.json  wrangler.jsonc
apps/mcp/: README.md  package.json
apps/web/: package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/worker/: package.json
bench/: README.md
crates/api/: Cargo.toml
crates/api/src/: answer.rs  audit.rs  auth.rs  embed.rs  error.rs  extract.rs  governance.rs  lib.rs  limit.rs  mesh.rs  strata_backend.rs
crates/api/tests/: audit.rs  auth.rs  branching.rs  core_api.rs  distribution.rs  distribution_etcd.rs  documents.rs  erasure.rs  governance.rs  hardening.rs  memory.rs  openapi.rs  replica_stream.rs  segments.rs  strata_engine.rs
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/control/: Cargo.toml
crates/control/src/: etcd.rs  lib.rs  mem.rs
crates/control/tests/: etcd_leases.rs
crates/docstore/: Cargo.toml
crates/docstore/src/: filter.rs  lib.rs  memories.rs  memory.rs  update.rs  vectors.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  libsql_engine.rs  node.rs  registry.rs  sqlguard.rs  value.rs  wal.rs
crates/engine/tests/: fts5.rs
crates/governance/: Cargo.toml
crates/governance/src/: erasure.rs  lib.rs  policy.rs  store.rs
crates/kv/: Cargo.toml
crates/kv/src/: lib.rs
crates/memoturnd/: Cargo.toml
crates/memoturnd/src/: main.rs
crates/replication/: Cargo.toml
crates/replication/src/: lib.rs  manifest.rs  replicator.rs  segment.rs  shipper.rs
crates/strata/: Cargo.toml
crates/strata/src/: fuse.rs  lib.rs
crates/strata/src/codec/: key.rs  record.rs
crates/strata/src/core/: compact.rs  logrec.rs  manifest.rs  memtable.rs  ops.rs  segment.rs  store.rs  view.rs  wal.rs
crates/strata/src/surface/: docfilter.rs  docs.rs  fts.rs  kv.rs  memory.rs  transcript.rs  vector.rs
crates/strata/tests/: backends.rs  bench_smoke.rs  engine.rs  soak.rs
docker/: api.Dockerfile  console.Caddyfile  console.Dockerfile  worker.Dockerfile
docs/: README.md  api.md  architecture.md  concepts.md  configuration.md  deployment-proof.md  deployment.md  development.md  evaluation.md  getting-started.md  hardening.md  integrations.md  prompts.md  releasing.md  roadmap.md  sdk-go.md  sdk-python.md  sdk-typescript.md  troubleshooting.md
docs/adr/: 0001-libsql-as-library.md  0001-storage-roles-and-mutable-state.md  0002-postgres-telemetry-tier.md  0002-rust-data-plane.md  0003-edge-deployment-profile.md  0003-ltx-segment-replication.md  0004-manifest-cow-branching.md  0004-telemetry-graduation-path.md  0005-etcd-leases-postgres-catalog.md  0005-managed-cloud-architecture.md  0006-documents-on-jsonb.md  0007-libsql-native-vectors.md  0008-deployment-not-statefulset.md  0009-typed-agent-memory.md  0010-data-governance.md  0011-object-native-typed-storage-engine.md  README.md
docs/api/: openapi.yaml
docs/architecture/: 00-overview.md  01-storage-engine.md  02-branching.md  03-control-plane.md  04-data-model-and-api.md  05-deployment.md  06-mcp-and-assistant.md  07-agent-memory.md  08-data-governance.md  09-object-native-engine.md
docs/brand/: BRAND.md  DESIGN.json  DESIGN.md  impeccable.md
docs/site/: .docs-sync  .gitignore  astro.config.mjs  package-lock.json  package.json  tsconfig.json
examples/: README.md  common.py  quickstart.ts  requirements.txt  run_e2e.py
examples/governance/: README.md  demo.py
examples/memory-agent/: README.md  agent.py  requirements.txt  script.txt
infra/: Caddyfile  docker-compose.dev.yml  docker-compose.prod.postgres.yml  docker-compose.prod.yml  docker-compose.yml  doris-setup.sh
mcp/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
scripts/: _dbg.ts  backup.sh  bench-http.py  chaos-pod-kill.sh  check-doc-drift.ts  check-port.ts  check-rbac.ts  demo.sh  infra.ts  replay-dlq.ts  screenshots.ts  seed-demo.ts  seed.ts  wait-for-infra.ts
sdk/python/: README.md  pyproject.toml
sdk/python/memoturn/: __init__.py  _async.py  _errors.py  _ops.py  _sync.py  _types.py
sdk/python/tests/: e2e.py
sdks/python/: BEST_PRACTICES.md  CHANGELOG.md  README.md  pyproject.toml
sdks/python/examples/: quickstart.py
sdks/python/src/memoturn/: __init__.py  _stream.py  anthropic.py  bedrock.py  chroma.py  client.py  cohere.py  crewai.py  dataset.py  decorator.py  gemini.py  groq.py  guardrails.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  mcp.py  mistral.py  openai.py  otel.py  pinecone.py  prompt.py  qdrant.py  weaviate.py
sdks/python/tests/: conftest.py  test_anthropic.py  test_bedrock.py  test_chroma.py  test_client.py  test_cohere.py  test_crewai.py  test_dataset.py  test_decorator.py  test_gemini.py  test_groq.py  test_guardrails.py  test_haystack.py  test_integration.py  test_langchain.py  test_langgraph.py  test_llamaindex.py  test_mcp.py  test_mistral.py  test_openai.py  test_pinecone.py  test_prompt.py  test_qdrant.py  test_stream.py  test_weaviate.py
(+364 files in other folders)
