[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/kv",
    "crates/docstore",
    "crates/replication",
    "crates/strata",
    "crates/control",
    "crates/governance",
    "crates/api",
    "crates/memoturnd",
    "crates/cli",
    "crates/bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
libsql = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time", "signal"] }
axum = "0.8"
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
object_store = { version = "0.12", features = ["aws"] }
futures = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
postcard = { version = "1", features = ["alloc"] }
crc32fast = "1"
lz4_flex = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = "thin"
