[package]
name = "memoturn-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
memoturn-engine = { path = "../engine" }
memoturn-kv = { path = "../kv" }
memoturn-docstore = { path = "../docstore" }
memoturn-replication = { path = "../replication" }
memoturn-control = { path = "../control" }
memoturn-governance = { path = "../governance" }
base64.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
async-trait.workspace = true
jsonwebtoken = "9"
ring = "0.17"
subtle = "2"
object_store.workspace = true
uuid.workspace = true
axum.workspace = true
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["timeout", "cors"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
http-body-util.workspace = true
