[package]
name = "memoturn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "memoturn"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
