[package]
name = "memoturn-docstore"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
memoturn-engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true

[lints]
workspace = true
