[package]
name = "memoturn-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libsql.workspace = true
tokio.workspace = true
moka.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
base64.workspace = true
tracing.workspace = true
sqlparser = "0.52"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
