[package]
name = "memoturn-governance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
object_store.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
ring = "0.17"
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
