[package]
name = "memoturn-kv"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
memoturn-engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
