[project]
name = "memoturn"
version = "0.1.0"
description = "Python SDK for Memoturn — memory for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memoturn"]
