[project]
name = "memoturn"
version = "0.3.0"
description = "memoturn Python SDK — tracing, @observe, OpenAI wrapper, prompts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["memoturn", "llm", "observability", "tracing", "openai", "langchain", "llamaindex", "evals", "opentelemetry"]
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/memoturn/memoturn"
Repository = "https://github.com/memoturn/memoturn"
Issues = "https://github.com/memoturn/memoturn/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
gemini = ["google-genai>=1.0"]
otel = ["opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-http>=1.20"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memoturn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
