[project]
name = "memoturn"
version = "0.4.0"
description = "memoturn Python SDK — tracing, @observe, OpenAI wrapper, prompts."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
  "memoturn", "llm", "observability", "tracing", "openai", "langchain", "langgraph",
  "llamaindex", "crewai", "haystack", "evals", "opentelemetry",
]
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/memoturn/memoturn"
Repository = "https://github.com/memoturn/memoturn"
Issues = "https://github.com/memoturn/memoturn/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
bedrock = ["boto3>=1.34"]
gemini = ["google-genai>=1.0"]
groq = ["groq>=0.4"]
mistral = ["mistralai>=1.0"]
cohere = ["cohere>=5.0"]
haystack = ["haystack-ai>=2.0"]
pinecone = ["pinecone>=5.0"]
chromadb = ["chromadb>=0.5"]
weaviate = ["weaviate-client>=4.0"]
qdrant = ["qdrant-client>=1.9"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-http>=1.20"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
# Load-bearing, not cosmetic: unlike every other extra above (which only documents
# what wrap_*/MemoturnCallbackHandler duck-type against), make_langgraph_handler()
# and instrument_crewai() genuinely `import langgraph` / `import crewai` at call time —
# there is no duck-typed path for LangGraph's isinstance-gated lifecycle callbacks or
# CrewAI's typed event-bus classes.
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.80"]
dev = ["pytest>=9.0.3", "langgraph>=0.2", "langchain-core>=0.1", "crewai>=0.80"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memoturn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
